--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: orange;
 } 
  
 h3 {
@@ -23,13 +23,14 @@ dd{
   font-size: 100px;
   font-family:
     
-Grusskarten Gotisch;background-color: black;
-  color:lightblue;
+Grusskarten Gotisch;background-color: white;
+  color:skyblue;
 }
 #jstexts {
   text-align:right;
   font-size: 100px;
   font-family:
-Grusskarten Gotisch;background-color: black;
+Grusskarten Gotisch;background-color: white;
   color:hotpink;
 }
+ 
